@@ -2,11 +2,11 @@ package cuchaz.enigma.gui.config;
 
 import java.awt.Font;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.Set;
 
 import javax.swing.UIManager;
 
-import com.google.common.collect.ImmutableMap;
 import de.sciss.syntaxpane.DefaultSyntaxKit;
 
 import cuchaz.enigma.gui.EnigmaSyntaxKit;
@@ -30,7 +30,7 @@ public class Themes {
 		EnigmaSyntaxKit.invalidate();
 		DefaultSyntaxKit.initKit();
 		DefaultSyntaxKit.registerContentType("text/enigma-sources", EnigmaSyntaxKit.class.getName());
-		ImmutableMap<RenamableTokenType, BoxHighlightPainter> boxHighlightPainters = getBoxHighlightPainters();
+		Map<RenamableTokenType, BoxHighlightPainter> boxHighlightPainters = getBoxHighlightPainters();
 		listeners.forEach(l -> l.onThemeChanged(laf, boxHighlightPainters));
 		ScaleUtil.applyScaling();
 		UiConfig.save();
@@ -85,9 +85,12 @@ public class Themes {
 		}
 	}
 
-	public static ImmutableMap<RenamableTokenType, BoxHighlightPainter> getBoxHighlightPainters() {
-		return ImmutableMap.of(RenamableTokenType.OBFUSCATED, BoxHighlightPainter.create(UiConfig.getObfuscatedColor(), UiConfig.getObfuscatedOutlineColor()), RenamableTokenType.PROPOSED, BoxHighlightPainter.create(UiConfig.getProposedColor(), UiConfig.getProposedOutlineColor()),
-								RenamableTokenType.DEOBFUSCATED, BoxHighlightPainter.create(UiConfig.getDeobfuscatedColor(), UiConfig.getDeobfuscatedOutlineColor()));
+	public static Map<RenamableTokenType, BoxHighlightPainter> getBoxHighlightPainters() {
+		return Map.of(
+				RenamableTokenType.OBFUSCATED, BoxHighlightPainter.create(UiConfig.getObfuscatedColor(), UiConfig.getObfuscatedOutlineColor()),
+				RenamableTokenType.PROPOSED, BoxHighlightPainter.create(UiConfig.getProposedColor(), UiConfig.getProposedOutlineColor()),
+				RenamableTokenType.DEOBFUSCATED, BoxHighlightPainter.create(UiConfig.getDeobfuscatedColor(), UiConfig.getDeobfuscatedOutlineColor())
+		);
 	}
 
 	public static void addListener(ThemeChangeListener listener) {
